--- a/submission/effect.tex
+++ b/submission/effect.tex
@@ -25,7 +25,7 @@ $^{\text{\sf 3}}$DNA Genotek, Ottawa, K2V 1C2, Canada.}
 \textbf{Motivation:} High throughput sequencing is analyzed using a combination of null hypothesis significance testing and ad-hoc cutoffs. This framework is strongly affected by sample size, and is known to be irreproducible in underpowered studies, yet no suitable non-parameteric alternative has been proposed. \\
 \textbf{Results:} Here we present implementations of non-parametric standardized median effect size estimates,  $\mathcal{E}_{d}$, for high-throughput sequencing datasets. Case studies are shown for transcriptome and amplicon-sequencing datasets.  The  $\mathcal{E}_{d}$ statistic is shown to be more reproducible and robust than p-values and requires sample sizes as small as 5 to reproducibly identify  differentially abundant features.\\
 \textbf{Availability:} Source code and binaries freely available at:\\
- https://bioconductor.org/packages/ALDEx2.html, omicplotR, and  https://github.com/ggloor/CoDaSeq.\\
+ https://bioconductor.org/packages/ALDEx2.html, omicplotR, and  https://github.com/ggloor/CoDaSeq. Datasets can be found at doi://10.6084/m9.figshare.8132216\\
 \textbf{Contact:} \href{ggloor@uwo.ca}{ggloor@uwo.ca}\\
 \textbf{Supplementary information:} Supplementary data and code are available at \textit{Bioinformatics} online.
 }
